// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`verifyHcaptchaToken fails when a test secret key is not used for a test token 1`] = `
Object {
  "challengeTimestamp": Any<String>,
  "credit": false,
  "errorCodes": Array [
    "not-using-dummy-secret",
  ],
  "hostname": "dummy-key-pass",
  "score": undefined,
  "scoreReasons": undefined,
  "success": false,
}
`;

exports[`verifyHcaptchaToken fails when no form data is sent 1`] = `
Object {
  "challengeTimestamp": undefined,
  "credit": undefined,
  "errorCodes": Array [
    "missing-input-response",
    "missing-input-secret",
  ],
  "hostname": undefined,
  "score": undefined,
  "scoreReasons": undefined,
  "success": false,
}
`;

exports[`verifyHcaptchaToken fails when no token is sent 1`] = `
Object {
  "challengeTimestamp": undefined,
  "credit": undefined,
  "errorCodes": Array [
    "missing-input-response",
  ],
  "hostname": undefined,
  "score": undefined,
  "scoreReasons": undefined,
  "success": false,
}
`;

exports[`verifyHcaptchaToken fails when the form data is invalid 1`] = `
Object {
  "challengeTimestamp": undefined,
  "credit": undefined,
  "errorCodes": Array [
    "invalid-input-response",
  ],
  "hostname": undefined,
  "score": undefined,
  "scoreReasons": undefined,
  "success": false,
}
`;

exports[`verifyHcaptchaToken fails when the remote IP is invalid 1`] = `
Object {
  "challengeTimestamp": undefined,
  "credit": undefined,
  "errorCodes": Array [
    "invalid-remoteip",
  ],
  "hostname": undefined,
  "score": undefined,
  "scoreReasons": undefined,
  "success": false,
}
`;

exports[`verifyHcaptchaToken fails when the site key is invalid 1`] = `
Object {
  "challengeTimestamp": undefined,
  "credit": undefined,
  "errorCodes": Array [
    "invalid-sitekey",
  ],
  "hostname": undefined,
  "score": undefined,
  "scoreReasons": undefined,
  "success": false,
}
`;

exports[`verifyHcaptchaToken succeeds with valid form data for the enterprise bot user 1`] = `
Object {
  "challengeTimestamp": Any<String>,
  "credit": undefined,
  "errorCodes": undefined,
  "hostname": "dummy-key-pass",
  "score": 1,
  "scoreReasons": Array [
    "bot",
  ],
  "success": true,
}
`;

exports[`verifyHcaptchaToken succeeds with valid form data for the enterprise safe user 1`] = `
Object {
  "challengeTimestamp": Any<String>,
  "credit": undefined,
  "errorCodes": undefined,
  "hostname": "dummy-key-pass",
  "score": 0,
  "scoreReasons": Array [
    "safe",
  ],
  "success": true,
}
`;

exports[`verifyHcaptchaToken succeeds with valid form data for the test publisher 1`] = `
Object {
  "challengeTimestamp": Any<String>,
  "credit": false,
  "errorCodes": undefined,
  "hostname": "dummy-key-pass",
  "score": undefined,
  "scoreReasons": undefined,
  "success": true,
}
`;
